--- a/index.html
+++ b/index.html
@@ -31,21 +31,22 @@
                 <div class="profile__border">
                     <div class="profile__perfil">
                         <!-- Insert your image, according to the example size of the portfolio -->
-                        <img src="site-assets/img/profile.webp" alt="" />
+                        <img src="site-assets/img/pas-foto.png" alt="" />
                     </div>
                 </div>
 
-                <h2 class="profile__name">Abdul Fahmi Aziz</h2>
-                <h3 class="profile__profession">Backend developer - Cloud Engineer </h3>
+                <h2 class="profile__name">Ade Arief Setiawan</h2>
+                <h3 class="profile__profession">Backend developer - Data Scientist </h3>
 
                 <ul class="profile__social">
-                    <a href="https://www.instagram.com/abdfahmia" target="_blank" class="profile__social-link">
+                    <a href="https://www.instagram.com/ariefade23" target="_blank" class="profile__social-link">
                         <i class="ri-instagram-line"></i>
                     </a>
-                    <a href="https://www.linkedin.com/in/abdfahmia" target="_blank" class="profile__social-link">
+                    <a href="https://www.linkedin.com/in/ade-arief-setiawan" target="_blank"
+                        class="profile__social-link">
                         <i class="ri-linkedin-box-line"></i>
                     </a>
-                    <a href="https://github.com/abdfahmia" target="_blank" class="profile__social-link">
+                    <a href="https://github.com/AdeAriefS" target="_blank" class="profile__social-link">
                         <i class="ri-github-line"></i>
                     </a>
                 </ul>
@@ -83,7 +84,7 @@
 
                 <div class="profile__buttons-small">
                     <!-- Insert a real number plus country code -->
-                    <a href="https://api.whatsapp.com/send?phone=087770173111&text=Hello, more information!"
+                    <a href="https://api.whatsapp.com/send?phone=089633016935&text=Hello, more information!"
                         target="_blank" class="button button__small button__gray">
                         <i class="ri-whatsapp-line"></i>
                     </a>
@@ -191,7 +192,7 @@
                                     <i class="ri-checkbox-circle-line"></i>
 
                                     <div>
-                                        <h3 class="skills__name">CSS </h3>
+                                        <h3 class="skills__name">CSS</h3>
                                     </div>
                                 </div>
 
@@ -211,7 +212,7 @@
                     </div>
 
                     <div class="skills__area">
-                        <h3 class="skills__title">CLoud Computing
+                        <h3 class="skills__title">Data Scientist
                         </h3>
 
                         <div class="skills__box">
@@ -220,7 +221,7 @@
                                     <i class="ri-checkbox-circle-line"></i>
 
                                     <div>
-                                        <h3 class="skills__name">Google Cloud Platform</h3>
+                                        <h3 class="skills__name">Golang</h3>
                                     </div>
                                 </div>
                             </div>
@@ -230,7 +231,7 @@
                                     <i class="ri-checkbox-circle-line"></i>
 
                                     <div>
-                                        <h3 class="skills__name">Iaas, Paas, Saas</h3>
+                                        <h3 class="skills__name">React Js</h3>
                                     </div>
                                 </div>
                             </div>
