--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet" />
 
     <!--=============== CSS ===============-->
-    <link rel="stylesheet" href="site-assets/css/styles.css" />
+    <link rel="stylesheet" href="site-assets/css/styles.css?v=1.0" />
 
-    <title>Abdul Fahmi A Portofolio</title>
+    <title>Ade Arief Setiawan Portofolio</title>
 </head>
 
 <body>
@@ -31,7 +31,7 @@
                 <div class="profile__border">
                     <div class="profile__perfil">
                         <!-- Insert your image, according to the example size of the portfolio -->
-                        <img src="site-assets/img/pas-foto.png" alt="" />
+                        <img src="site-assets/img/pas-foto-new.png" alt="" />
                     </div>
                 </div>
 
@@ -89,7 +89,7 @@
                         <i class="ri-whatsapp-line"></i>
                     </a>
                     <!-- Insert your brand name or profile -->
-                    <a href="mailto: abdfahmia78@gmail.com" target="_blank" class="button button__small button__gray">
+                    <a href="mailto: ariefade99@gmail.com" target="_blank" class="button button__small button__gray">
                         <i class="ri-mail-line"></i>
                     </a>
                 </div>
@@ -158,13 +158,14 @@
 
                     <article class="projects__card">
                         <!-- Insert your image in a rectangular format (Ex: 600 x 400, 1000 x 800, 1200 x 1000, etc) -->
-                        <img src="site-assets/img/bangkit.webp" alt="" class="projects__img" />
+                        <img src="site-assets/img/Prediction.png" alt="" class="projects__img" />
 
                         <div class="projects__modal">
                             <div>
-                                <span class="projects__subtitle">Cloud</span>
-                                <h3 class="projects__title">Cloud Function for API</h3>
-                                <a href="https://github.com/Bangkit-C22-PS021"
+                                <span class="projects__subtitle">Data Science</span>
+                                <h3 class="projects__title">Prediction Data Transaction BRINETS with XGBoost Algorithm
+                                </h3>
+                                <a href="https://www.canva.com/design/DAGYHB1YnkA/phVCdJlhyG5T5b60xNuBmQ/edit?utm_content=DAGYHB1YnkA&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton"
                                     class="projects__button button button__small">
                                     <i class="ri-link"></i>
                                 </a>
@@ -207,7 +208,16 @@
                                         <h3 class="skills__name">Bootstrap</h3>
                                     </div>
                                 </div>
+
+                                <div class="skills__data">
+                                    <i class="ri-checkbox-circle-line"></i>
+
+                                    <div>
+                                        <h3 class="skills__name">React Js</h3>
+                                    </div>
+                                </div>
                             </div>
+
                         </div>
                     </div>
 
@@ -221,7 +231,15 @@
                                     <i class="ri-checkbox-circle-line"></i>
 
                                     <div>
-                                        <h3 class="skills__name">Golang</h3>
+                                        <h3 class="skills__name">Algoritma XGBoost</h3>
+                                    </div>
+                                </div>
+
+                                <div class="skills__data">
+                                    <i class="ri-checkbox-circle-line"></i>
+
+                                    <div>
+                                        <h3 class="skills__name">Algoritma LSTM</h3>
                                     </div>
                                 </div>
                             </div>
@@ -231,7 +249,15 @@
                                     <i class="ri-checkbox-circle-line"></i>
 
                                     <div>
-                                        <h3 class="skills__name">React Js</h3>
+                                        <h3 class="skills__name">Algoritma Prophet Meta</h3>
+                                    </div>
+                                </div>
+
+                                <div class="skills__data">
+                                    <i class="ri-checkbox-circle-line"></i>
+
+                                    <div>
+                                        <h3 class="skills__name">Python</h3>
                                     </div>
                                 </div>
                             </div>
@@ -258,6 +284,14 @@
                                         <h3 class="skills__name">Postgree SQL</h3>
                                     </div>
                                 </div>
+
+                                <div class="skills__data">
+                                    <i class="ri-checkbox-circle-line"></i>
+
+                                    <div>
+                                        <h3 class="skills__name">Clickhouse SQL</h3>
+                                    </div>
+                                </div>
                             </div>
 
                             <div class="skills__group">
@@ -266,6 +300,14 @@
 
                                     <div>
                                         <h3 class="skills__name">MySql</h3>
+                                    </div>
+                                </div>
+
+                                <div class="skills__data">
+                                    <i class="ri-checkbox-circle-line"></i>
+
+                                    <div>
+                                        <h3 class="skills__name">SQL Server</h3>
                                     </div>
                                 </div>
                             </div>
@@ -284,6 +326,14 @@
                                         <h3 class="skills__name">Git</h3>
                                     </div>
                                 </div>
+
+                                <div class="skills__data">
+                                    <i class="ri-checkbox-circle-line"></i>
+
+                                    <div>
+                                        <h3 class="skills__name">Bitbucket</h3>
+                                    </div>
+                                </div>
                             </div>
 
                             <div class="skills__group">
@@ -292,6 +342,14 @@
 
                                     <div>
                                         <h3 class="skills__name">Gitlab</h3>
+                                    </div>
+                                </div>
+
+                                <div class="skills__data">
+                                    <i class="ri-checkbox-circle-line"></i>
+
+                                    <div>
+                                        <h3 class="skills__name">Bamboo Atlassian</h3>
                                     </div>
                                 </div>
                             </div>
@@ -309,7 +367,7 @@
             <script>
                 document.write(new Date().getFullYear());
             </script>
-            Abdul Fahmi Aziz All Rights Reserved
+            Ade Arief Setiawan All Rights Reserved
         </span>
     </footer>
 
