--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     </p>
                 </div>
                 <div class="profile__info-group">
-                    <h3 class="profile__info-number" id="gh-project">10+</h3>
+                    <h3 class="profile__info-number" id="gh-project">5+</h3>
                     <p class="profile__info-description">
                         Github <br />
                         projects
@@ -78,7 +78,7 @@
 
             <div class="profile__buttons">
                 <!-- Insert your CV -->
-                <a download="" href="./Abdul_Fahmi Aziz_Resume_5.pdf" class="button">
+                <a download="" href="./Ade_Arief_Setiawan--3275092303000013.pdf" class="button">
                     Download CV <i class="ri-download-line"></i>
                 </a>
 
@@ -112,43 +112,13 @@
                 <!--=============== PROJECTS ===============-->
                 <div class="projects__content grid filters__active" data-content id="projects">
                     <article class="projects__card">
-                        <img src="site-assets/img/smpn2kemang.webp" alt="" class="projects__img" />
+                        <img src="site-assets/img/atm.png" alt="" class="projects__img" />
 
                         <div class="projects__modal">
                             <div>
-                                <span class="projects__subtitle">Web</span>
-                                <h3 class="projects__title">SMPN 2 Kemang Kab Bogor</h3>
-                                <a href="http://smpn2kemangkabbogor.sch.id/"
-                                    class="projects__button button button__small">
-                                    <i class="ri-link"></i>
-                                </a>
-                            </div>
-                        </div>
-                    </article>
-
-                    <article class="projects__card">
-                        <img src="site-assets/img/desserthash.webp" alt="" class="projects__img" />
-
-                        <div class="projects__modal">
-                            <div>
-                                <span class="projects__subtitle">Web</span>
-                                <h3 class="projects__title">DessertHash</h3>
-                                <a href="https://github.com/abdfahmia/Projek-RPLL"
-                                    class="projects__button button button__small">
-                                    <i class="ri-link"></i>
-                                </a>
-                            </div>
-                        </div>
-                    </article>
-
-                    <article class="projects__card">
-                        <img src="site-assets/img/eperda-chat.webp" alt="" class="projects__img" />
-
-                        <div class="projects__modal">
-                            <div>
-                                <span class="projects__subtitle">Web / Mobile</span>
-                                <h3 class="projects__title">Eperda Chat</h3>
-                                <a href="https://github.com/abdfahmia/eperda-chat"
+                                <span class="projects__subtitle">Data Science</span>
+                                <h3 class="projects__title"> Enhanced ATM Anomaly Detection</h3>
+                                <a href="https://www.canva.com/design/DAGC1KIpXto/x_P_jbTAwiC_cjZiMEvxDg/edit?utm_content=DAGC1KIpXto&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton"
                                     class="projects__button button button__small">
                                     <i class="ri-link"></i>
                                 </a>
@@ -166,6 +136,36 @@
                                 <h3 class="projects__title">Prediction Data Transaction BRINETS with XGBoost Algorithm
                                 </h3>
                                 <a href="https://www.canva.com/design/DAGYHB1YnkA/phVCdJlhyG5T5b60xNuBmQ/edit?utm_content=DAGYHB1YnkA&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton"
+                                    class="projects__button button button__small">
+                                    <i class="ri-link"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </article>
+
+                    <article class="projects__card">
+                        <img src="site-assets/img/kkp.png" alt="" class="projects__img" />
+
+                        <div class="projects__modal">
+                            <div>
+                                <span class="projects__subtitle">Desain UI/UX Mobile</span>
+                                <h3 class="projects__title">UI Design for Workshop Booking Application</h3>
+                                <a href="https://www.figma.com/design/70sgOyrrxwyAw2UVg6iivo/Untitled?node-id=0-1&t=FPQ6IqMDYn20sdUE-1"
+                                    class="projects__button button button__small">
+                                    <i class="ri-link"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </article>
+
+                    <article class="projects__card">
+                        <img src="site-assets/img/TA.png" alt="" class="projects__img" />
+
+                        <div class="projects__modal">
+                            <div>
+                                <span class="projects__subtitle">Mobile Apps</span>
+                                <h3 class="projects__title">O'lala Electric Bike Rental Application</h3>
+                                <a href="https://www.youtube.com/watch?si=Ro-LxYJYpyypXPE1&v=x0AYnuvNYpI&feature=youtu.be"
                                     class="projects__button button button__small">
                                     <i class="ri-link"></i>
                                 </a>
