--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 </div>
 
                 <h2 class="profile__name">Ade Arief Setiawan</h2>
-                <h3 class="profile__profession">Backend developer - Data Scientist </h3>
+                <h3 class="profile__profession">Fontend Developer - Backend Developer - Data Scientist </h3>
 
                 <ul class="profile__social">
                     <a href="https://www.instagram.com/ariefade23" target="_blank" class="profile__social-link">
